Fix modal background exposure and alignment issues (#37)
* Fix problem with overlap on modal showing the background

* Align header and close button in sponsor modal

--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -132,24 +132,29 @@ nav {
 
 // The Modal (background)
 .modal {
-    display: none; // Hidden by default
-    position: fixed; // Stay in place
-    z-index: 10000; // Sit on top
-    padding-top: 100px; // Location of the box
-    left: 0;
-    top: 0;
-    width: 100%; // Full width
-    height: 100%; // Full height
-    overflow: auto; // Enable scroll if needed
-    background-color: rgb(0,0,0); // Fallback color
-    background-color: rgba(0,0,0,0.4); // Black w/ opacity
+    // Fill all of screen, staying on the top
+    z-index: 10000;
+    width: 100%;
+    height: 100%;
+
+    // Stay in place and enable scroll
+    position: fixed;
+    overflow: auto;
+
+    // Translucent black and fallback colour w/o alpha
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+
+    // Center child
+    display: none; // Set to flex later in JS
+    justify-content: center;
+    align-items: center;
 }
 
 // Modal Content
 .modal-content {
-    position: relative;
+    border-radius: .4rem;
     background-color: #fefefe;
-    margin: auto;
     padding: 0;
     width: 60%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
@@ -171,12 +176,12 @@ nav {
 }
 
 
-// The Close Button
+// The sponshorship modal's close button
 .close {
     color: white;
-    float: right;
     font-size: 28px;
     font-weight: bold;
+    padding: 0 1em !important;
 }
 .close:hover, .close:focus {
     color: #000;
@@ -185,9 +190,19 @@ nav {
 }
 
 .modal-header {
-    padding: 2px 16px;
     background-color: #212322;
     color: white;
+
+    // Grid for aligning the text and close button
+    display: grid;
+    grid-template-columns: max-content min-content;
+    align-items: center;
+    
+    // Override whatever a page may set for h2
+    h2 {
+        padding: 0;
+        margin: 0;
+    }
 }
 
 .modal-body {
@@ -333,13 +348,8 @@ h2{
     // }
 
     // Adjust the modal for the new view
-    .modal {
-        padding-top: 75px;
-    }
     .modal-content {
     	width: 80%;
-    	margin-left: 10%;
-    	margin-right: 10%;
     }
 	.vertical-line {
 	  	display: none;
